Fix: allow more Spotbugs failures